--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/mode-edit.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/mode-edit.tml
@@ -23,6 +23,9 @@
 		else if(tmlform.allowedDbsOption=="none")
 			host.defaultDatabase="";
 
+		if(!tmlform.field("/defaultDatabase"))
+			host.hideDefaultDatabaseInURL=false;
+		
 		if(!tmlform.field("/hideDefaultDatabaseInURL"))
 			host.hideHomepageURL=false;
 
