#00005819: Changed/Updated some module categories

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/column-slider/config.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/column-slider/config.tml
@@ -2,7 +2,7 @@
 	id_alias:		'ig_column-slider',
 	id:				'cm_column-slider',
 	title:			'<tml:label key="module.column-slider"/>',
-	category:		'Container',
+	category:		'Spalten',
 	type:			'container',
 	tml:			'modules:column-slider:render',
 	settingstml: 	'modules:column-slider:settings',
