--- a/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
@@ -97,6 +97,7 @@
 			padding:10px;
 			margin:10px 0;
 			background: white;
+			hyphens: auto;
 			.title{
 				position: absolute;
 				z-index: 1;
