--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/anker/config.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/anker/config.tml
@@ -1,5 +1,6 @@
 {
 	id:				'cm_anker',
+	category:		'Tools',
 	title:			'Sprungmarke (Anker)',
 	tml:			'modules:anker:render',
 	settingstml: 	'modules:anker:settings',
