#00005819. moved image-wall to category "media"

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/config.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/config.tml
@@ -1,7 +1,7 @@
 {
 	id:				'cm_image-wall',
+	category:		'<tml:label key="module.category.media"/>',
 	title:			'<tml:label key="module.image-wall"/>',
-	category:		'Container',
 	type:			'container',
 	tml:			'modules:image-wall:render',
 	settingstml: 	'modules:image-wall:settings',
