--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/hr/config.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/hr/config.tml
@@ -24,7 +24,7 @@
 ## LICENSE END #################################################################
 {
 	id:				'cm_horrizontal_line',
-	category:		'Tools',
+	category:		"Verschiedenes",
 	title:			'<tml:label key="module.horrizontal-line"/>',
 	icon:			"<tml:url db="@afw" type="file" doc="icons" file="application_split.png"/>",
 	tml:			'plugin-cm-modules/modules:hr:render'
