Don't allow current Website ad form-data storage

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/portlet-form.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/portlet-form.tml
@@ -118,7 +118,7 @@
 	}
 	if(action.contains("store")){
 
-		var dbkey = CMM.setting("dbkey") || db().getDbReference();;
+		var dbkey = CMM.setting("dbkey");
 		var id = WGA.scoped('formid');
 
 		WGA.Master.runFunction(function(id, title, dbkey){
