#00005827: Added URL parameter to javascript includes to avoid browser cache problems

--- a/OpenWGA/plugins/cm-neo/design/tml/html/html.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/html.tml
@@ -13,6 +13,7 @@
 		
 		<script>
 			require.config({
+				urlArgs: "v=<tml:script format="0" expression="WGA.server().getVersion().toProjectVersion()"/>",
 				baseUrl: "<tml:meta type="request" name="wgaurl"/>/<tml:metadata name="dbkey" type="database" context="main"/>/js",
 				paths: {
 					"bootstrap": "<tml:url type="file" doc="bootstrap" file="javascripts/bootstrap.min.js"/>?noext",
