#00005828: Corrected CSS for module "tiles" style "border"

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
@@ -34,7 +34,7 @@
 				
 				"&.border": {
 					border: "solid silver 1px",
-					".module-cm_rtf": {
+					"> .module-cm_rtf": {
 						margin: 10
 					}
 				},
