#00005833: Timing problem: Outline view may not be rendered

--- a/OpenWGA/plugins/cm-neo/design/tml/html/appnav/mode-outline.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/appnav/mode-outline.tml
@@ -13,6 +13,7 @@
 		WGA.portlet.registerObject("<tml:script expression="portlet.portletkey"/>", {
 			destroy: function(){
 				Outline.showHeadings(false);
+				Outline.removePageRenderedListener()
 			}
 		})
 	});
