--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
@@ -35,10 +35,12 @@
 						title = c.TITLE;
 					pages.push("Nach '" + title + "'|" + doc.getStructKey().toString())
 				}
-				_optgroups = [{
-					label: "An definierter Position einfügen:",
-					options: pages
-				}]
+				_optgroups=null;
+				if(pages.length>1)
+					_optgroups = [{
+						label: "An definierter Position einfügen:",
+						options: pages
+					}]
 			</tml:script>
 			<tml:[form-field] o_label="Position" o_name="position" o_type="select" o-optionvalues="_opts" o-optgroups="_optgroups"/>
 		</tml:case>
