#00005840: Improved content module "tabs"

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tabs/render-tab-panel.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tabs/render-tab-panel.tml
@@ -23,6 +23,4 @@
 ## If not, see <http://www.gnu.org/licenses/>.
 ## LICENSE END #################################################################
 
-<tml:include ref="system:include-child-modules">
-	<tml:option name="margins" expression="true" scope="local"/>
-</tml:include>
+<tml:portlet name="[pane-{$option_ns}]" ref="::content:portlet" portletmode="view"/>
