#00005839: Item Editor not rendered when item is part of a portlet

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/content/mode-loaded.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/content/mode-loaded.tml
@@ -4,9 +4,7 @@
 
 <tml:case condition="STATUS==content().STATUS_DRAFT">
 	<script>
-		if(window.name=="wga-contentmanager-iframe"){
-			window.parent.BI.sitepanel.initItemEditors();
-		}
+		window.parent.CM && window.parent.CM.initItemEditors();
 	</script>
 </tml:case>
 
