#00005844: Store last used contenttype in user profile and use it as default for new pages

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
@@ -1,7 +1,7 @@
 <tml:script>
 	_opts = option("dialog_options")
 	setOption("current_lang", LANGUAGE);
-	setOption("current_pagetype", CONTENTTYPE);
+	setOption("default_pagetype", profile.last_used_contenttype || CONTENTTYPE);
 	App.settingsSaveHandler=[];
 </tml:script>
 
