--- a/OpenWGA/plugins/cm-neo/design/tml/html/admin/pagetypes/mode-edit.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/admin/pagetypes/mode-edit.tml
@@ -10,7 +10,7 @@
 	_query_delete=true;
 	_may_delete = true;
 	try{
-		document.performRemoveCheck();
+		document.performRemoveCheck(true);
 	}
 	catch(e){
 		_may_delete = false;
