#00005865: CM-Neo: Re-Login dialog now uses reopenSession() with request parameter

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/userinfo.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/userinfo.tml
@@ -15,7 +15,7 @@
 
 <tml:action id="login">
 
-	if(!callAction("cms:check-user-login", meta("database","dbkey")))
+	if(!callAction("cms:check-user-login", meta("database","dbkey"), request))
 		return;
 
 	if(login(tmlform.username, tmlform.password, tmlform.domain)){
