#00005869: Improved styles for select2 utility

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/select2.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/select2.scss
@@ -1,3 +1,7 @@
-.select2-container--default .select2-selection--multiple{
+.select2-container--default .select2-selection{
 	border: 1px solid #ccc  !important;
+	min-height: 32px;
+	.select2-selection__arrow{
+		height: 30px !important;
+	} 
 }
